# LanguageStat

./: .gitignore  CMakeLists.txt  README.md  build.sh  main.cpp  steps
inc/: logger.h  parse_dir.h  presenter.h  updatelang.h  user_types.h
src/: logger.c  parse_dir.c  presenter.c  source.c  updatelang.c
